--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.1.3",
     "react": "^18",
+    "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "swiper": "^11.0.7"
