--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "swiper": "^11.0.7"
   },
