--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
