--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-scroll-to-top": "^3.0.0",
+    "sharp": "^0.33.3",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
